--- a/Ruby/AMPTA/app/views/layouts/application.html.erb
+++ b/Ruby/AMPTA/app/views/layouts/application.html.erb
@@ -2,25 +2,56 @@
 <html>
 <head>
   <title>AMPTA</title>
-  <%= stylesheet_link_tag "application"%>
-  <%= javascript_include_tag "application"%>
+  <%= stylesheet_link_tag    "application", :media => "all" %>
+  <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
+	<body>
 
-	<%= yield %>
-	<div id="user_nav">
-	  <% if current_user %>
-	    Logged in as <%= current_user.email %>.
-	    <%= link_to "Log out", log_out_path %>
-	  <% else %>
-	    <%= link_to "Sign up", sign_up_path %> or
-	    <%= link_to "log in", log_in_path %>
-	  <% end %>
+<% if current_user %>
+<div class="container-fluid">
+	<nav class="clearfix">
+		<div id="LeftNav">
+		  	<%= link_to "Startpage", projects_path %>
+		  		<%= link_to "All projects", projects_path %>
+		  <%= link_to "Create project", create_project_path %>
+		</div>
+		<div id="RightNav">
+		  	<% if current_user %>
+		    	Logged in as <%= current_user.first_name %>.
+		    	<%= link_to "Log out", log_out_path %>
+		  	<% end %>
+		</div>
+	</nav>
+
+	<div class="row-fluid">
+	    <div class="span2">
+	      	<h6>Your projects</h6>
+
+	      	<% if current_user %>
+		      	<% user_projects.each do |u| %>
+	              <p>
+
+	                <%= link_to u.name, myproject_path(u.id) %>
+	              </p>
+	        	<% end %>
+        	<% else %>
+        		<p class="muted">Inga projekt ännu.</p>
+        	<% end %>
+
+      		<br />
+	      	<h6>Your last 10 tickets</h6>
+	    </div>
+	    <div class="span10">
+	      	<%= yield %>
+	    </div>
 	</div>
+</div>
+<% else %>
+ <%= yield %>
+<% end %>
 
-	<% flash.each do |name, msg| %>
-	  <%= content_tag :div, msg, :id => "flash_#{name}" %>
-	<% end %>
+	
 </body>
 </html>
