--- a/Ruby/AMPTA/app/views/layouts/application.html.erb
+++ b/Ruby/AMPTA/app/views/layouts/application.html.erb
@@ -14,8 +14,8 @@
 	<nav class="clearfix">
 		<div id="LeftNav">
 		  	<%= link_to "Startpage", projects_path %>
-		  		<%= link_to "All projects", projects_path %>
-		  <%= link_to "Create project", create_project_path %>
+		  		<%= link_to "All projects", all_projects_path %>
+		  <%= link_to "Create project", new_project_path %>
 		</div>
 		<div id="RightNav">
 		  	<% if current_user %>
