--- a/Ruby/AMPTA/app/views/projects/show.html.erb
+++ b/Ruby/AMPTA/app/views/projects/show.html.erb
@@ -12,7 +12,7 @@
 
 <h4>Tickets:</h4>
 
-<%= link_to "Lägg till ny", new_ticket_path %>
+<%= link_to "Lägg till ny", new_project_ticket_path(@project) %>
 
 <%= submit_tag "Editera projektet", :class => "btn" %>
 <%= submit_tag "Ta bort projektet", :class => "btn" %>
