--- a/Ruby/AMPTA/app/assets/stylesheets/style.css.scss
+++ b/Ruby/AMPTA/app/assets/stylesheets/style.css.scss
@@ -47,8 +47,8 @@ section {
 
 	-webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
 	-moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
-	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
-	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+	-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+	-text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   	
 	background-color: #49afcd;
 	background-image: -moz-linear-gradient(top, #5bc0de, #2f96b4);
@@ -72,11 +72,23 @@ section form legend {
 	color: #fff;
 }
 
+section form span {
+	color: #ddd;
+}
+
+section form a {
+	color: #fff;
+}
+
+section form a:hover {
+	color: #fff;
+}
+
 
 /* Site containers and content */
 
 .span2, .span10 {
-	padding: 10px;
+	padding: 15px;
 	border: 1px solid #fff;
 
     background: rgb(221, 221, 221); /* Fall-back for browsers that don't
@@ -90,14 +102,115 @@ section form legend {
 	-webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
 	-moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
 	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
-	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+	-text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
 
-/* New project */
-.new_project legend {
+.span10 {
+	padding: 40px;
+}
+
+
+/* Projects */
+.yourProject, .memberProject {
+	font-size: 10px;
+	padding: 3px 6px;
+	color: rgb(245, 245, 245);
+	
+  	-webkit-border-radius: 4px; 
+  	-moz-border-radius: 4px; 
+  	border-radius: 4px;
+
+  	background-color: #5bb75b;
+	background-image: -moz-linear-gradient(top, #62c462, #51a351);
+	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#62c462), to(#51a351));
+	background-image: -webkit-linear-gradient(top, #62c462, #51a351);
+	background-image: -o-linear-gradient(top, #62c462, #51a351);
+	background-image: linear-gradient(to bottom, #62c462, #51a351);
+	background-repeat: repeat-x;
+	border-color: #51a351 #51a351 #387038;
+	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff62c462', endColorstr='#ff51a351', GradientType=0);
+	filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+}
+
+.memberProject {
+	background-color: #49afcd;
+	background-image: -moz-linear-gradient(top, #5bc0de, #2f96b4);
+	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#5bc0de), to(#2f96b4));
+	background-image: -webkit-linear-gradient(top, #5bc0de, #2f96b4);
+	background-image: -o-linear-gradient(top, #5bc0de, #2f96b4);
+	background-image: linear-gradient(to bottom, #5bc0de, #2f96b4);
+	background-repeat: repeat-x;
+	border-color: #2f96b4 #2f96b4 #1f6377;
+	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff5bc0de', endColorstr='#ff2f96b4', GradientType=0);
+	filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+}
+
+.projectRow {
+	line-height: 30px;
+	border-bottom: 1px solid rgba(207, 207, 207, 0.2);
+}
+
+.yourProject i, .memberProject i {
+	vertical-align: -4px;
+	margin-right: 2px;
+	color: #fff;
+}
+
+.projectCell {
+	padding-right: 10px;
+}
+
+
+
+/* New project/ticket */
+.new_project legend, .new_ticket legend {
+	max-width: 250px;
 	font-size: 14px;
+	color: #333;
 }
 
+.new_ticket textarea {
+	max-width: 210px;
+}
+
+.siteForms {
+	color: #666;
+	background-color: #f5f5f5;
+	background-image: -moz-linear-gradient(top, #fafafa, #e6e6e6);
+	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fafafa), to(#e6e6e6));
+	background-image: -webkit-linear-gradient(top, #fafafa, #e6e6e6);
+	background-image: -o-linear-gradient(top, #ffffff, #e6e6e6);
+	background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);
+	background-repeat: repeat-x;
+	border: 1px solid #bbbbbb;
+	border-color: #e6e6e6 #e6e6e6 #bfbfbf;
+	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+	border-bottom-color: #a2a2a2;
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe6e6e6', GradientType=0);
+	filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+	margin-top: 0px;
+}
+
+
+
+/* Error messages */
+.error_messages {
+	
+}
+
+.error_messages h4 {
+	color: rgb(233, 75, 72);
+}
+
+.error_messages li {
+	color: #555;
+}
+
+.field_with_errors input {
+	border: 2px solid rgba(233, 75, 72, .8);
+}
 
 
 
