--- a/Ruby/AMPTA/app/views/projects/all.html.erb
+++ b/Ruby/AMPTA/app/views/projects/all.html.erb
@@ -1,1 +1,38 @@
-<h1>All projects</h1>
+<h4>All projects</h4>
+
+<% if @projects.size > 0 %>
+	<table>
+	<% @projects.each do |p| %>
+		<tr class="projectRow">			
+
+				<!-- If online user are a member -->
+				<% if p.users.include?(current_user) %>
+					<td class="projectCell">
+						<%= link_to p.name, project_path(p.id) %>
+					</td>
+
+					<td>
+						<span class="memberProject"><i class="icon-ok-sign"></i>Member</span>
+					</td>
+
+					<!-- If online user are admin -->
+					<% if p.user_id == current_user.id %>
+						<td>
+							<span class="yourProject"><i class="icon-ok-sign"></i>Admin</span>
+						</td>
+					<% end %>
+
+
+			<% else %>
+				<td class="projectCell">
+					<span class="muted"><%= p.name %></span>
+				</td>
+			<% end %>
+
+
+		</tr>
+	<% end %>
+	</table>
+<% else %>
+	<p class="muted">Sorry, there are no projects created yes.</p>
+<% end %>
