--- a/Ruby/AMPTA/app/views/tickets/new.html.erb
+++ b/Ruby/AMPTA/app/views/tickets/new.html.erb
@@ -1,27 +1,31 @@
-<section>
+<h4>Create a ticket</h4>
+<!-- <section class="siteForms"> -->
+<%= form_for @ticket, :url => project_tickets_path(@project)  do |t| %>
+      
 	  <% if @ticket.errors.any? %>
 	    <div class="error_messages">
-	      <h2>Form is invalid</h2>
+	      <h4>Form is invalid</h4>
 	      <ul>
-	        <% for message in @ticket.errors.full_messages %>
-	          <li><%= message %></li>
+	        <% for msg in @ticket.errors.full_messages %>
+	          <li><%= msg %></li>
 	        <% end %>
 	      </ul>
 	    </div>
 	  <% end %>
-	  	<%= form_for @ticket, :url => project_tickets_path(@project) do |f| %>
-	  	<h1>Skapa en ny ticket</h1>
-	  	<%= f.hidden_field :project_id, :value => @project.id %>
-	  	<%= f.hidden_field :user_id, :value => current_user.id %>
-	    <%= f.label :name %>
-	    <%= f.text_field :name %>
 
-	    <%= f.label :description %>
-	    <%= f.text_area :description %>
+	<legend>Please enter the information below</legend>
+	<%= t.hidden_field :project_id, :value => @project.id %>
+	<%= t.hidden_field :user_id, :value => current_user.id %>
 
-	    <%= f.collection_select :status_id, @status, :id, :status_name, :prompt => 
-	    "Select a status" %>
+	<%= t.label :name %>
+	<%= t.text_field :name, :placeholder => "Eg. Create a ticket..." %>
 
-	  	<%= f.submit %>
-	<% end %>
-</section>
+	<%= t.label :description %>
+	<%= t.text_area :description, :size => "10x10", :placeholder => "Eg. Trying to create a ticket..." %>
+
+	<br />
+	<%= t.collection_select :status_id, @status, :id, :status_name, :prompt => "Select a status" %>
+	<br />
+	<%= t.submit "Create ticket", :class => "btn" %>
+<% end %>
+<!-- </section> -->
