--- a/Ruby/AMPTA/app/assets/stylesheets/tickets.css.scss
+++ b/Ruby/AMPTA/app/assets/stylesheets/tickets.css.scss
@@ -1,3 +1,11 @@
-// Place all the styles related to the Tickets controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+/* line 4, ../../app/assets/stylesheets/tickets.css.scss */
+/* line 3, ../../app/assets/stylesheets/tickets.css.scss */
+.span9 {
+  text-align: left;
+  color: white;
+}
+
+/* line 8, ../../app/assets/stylesheets/tickets.css.scss */
+.span9 .dropdown-menu {
+  color: black;
+}
