--- a/Ruby/AMPTA/app/views/projects/edit.html.erb
+++ b/Ruby/AMPTA/app/views/projects/edit.html.erb
@@ -13,8 +13,6 @@
     </div>
   <% end %>
 
-	<legend>Please enter the information below</legend>
-
         <%= p.label :name %>
         <%= p.text_field :name %>
 
@@ -38,6 +36,6 @@
                 <% end %>
               </p>
         <% end %>
-
-    	<%= p.submit "Save changes", :class => "btn" %>
+      <p></p>
+    	<%= p.submit "Save changes", :class => "btn btn-warning" %>
 <% end %>
