--- a/Ruby/AMPTA/app/views/layouts/application.html.erb
+++ b/Ruby/AMPTA/app/views/layouts/application.html.erb
@@ -2,78 +2,132 @@
 <html>
 <head>
   <title>AMPTA</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
+  
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-	<body>
 
-<% if current_user %>
-<div class="container-fluid">
-	<nav class="clearfix">
-		<div id="LeftNav">
-		  	<%= link_to "Startpage", projects_path %>
-		  		<%= link_to "All projects", all_projects_path %>
-		  <%= link_to "Create project", new_project_path %>
+</html>
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>AMPTA</title>
+    <%= stylesheet_link_tag    "application", :media => "all" %>
+    <%= javascript_include_tag "application", :media => "all" %>
+    <%= csrf_meta_tags %>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <!-- Le styles -->
+    <style type="text/css">
+      body {
+        padding-top: 60px;
+        padding-bottom: 40px;
+      }
+    </style>
+
+  </head>
+
+  <body>
+
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="brand" href="#">Ruby on Rails Project</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li> <%= link_to "Home", projects_path %> </li>
+              <li><%= link_to "All projects", all_projects_path %></li>
+              <li><%= link_to "Create project", new_project_path %></li>
+            </ul>
+            <form class="navbar-form pull-right">
+              <% if current_user %>
+                <b class="loginname">Autenticated as <%= current_user.first_name %> </b>.
+                  <%= link_to "Log out", log_out_path, :class => "btn btn-danger" %>
+                <% end %>
+            </form>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+
+		<% if current_user %>
+		<div class="container-fluid">
+      <div class="nav-collapse collapse">
+        <form class="navbar-form pull-right">
+        <%= form_tag do %>
+          <%= text_field_tag :search, params[:search], :class => "span2", :placeholder => "Search project" %>
+          <%= submit_tag "Search", :name => :nil, :class => "btn btn-success" %>
+        <% end %>
+        </form>
+
+      </div>
+
+			<div class="row-fluid">
+			    <div class="span3">
+			      	<h4>Your projects</h4>
+			      	<!-- Check if there are any projects for the online user -->
+		      		<% if user_projects.size > 0 %>
+		      			<table>
+		      				
+
+		  					<!-- Loop out the online users projects -->
+				      		<% user_projects.each do |u| %>
+                  <tr>
+  							<td class="projectCell">
+  			            		<%= link_to u.name, project_path(u.id) %>
+  							</td>
+				      		<% if u.user_id == current_user.id %>
+				      			<td>
+									<span class="yourProject"><i class="icon-ok-sign"></i>Admin</span>
+								</td>
+				      		<% else %>
+				      			<td></td>
+				      		<% end %>
+                    </tr>
+		        		<% end %>
+
+		        		
+						</table>
+					<% else %>
+						<p class="muted">You have no projects.</p>
+					<% end %>
+
+		      		<br />
+			      	<h6>Your last 10 tickets</h6>
+
+			      	<!-- Loop out the online users tickets if there is any -->
+			      	<% if user_projects.size > 0 %>
+			      		<% user_tickets.each do |u| %>
+							<p>
+			            		<%= link_to u.name, ticket_path(u.id) %>
+							</p>
+		        		<% end %>
+					<% else %>
+						<p class="muted">You have no tickets.</p>
+					<% end %>
+			    </div>
+			    <div class="span9">
+			      	<%= yield %>
+			    </div>
+			</div>
 		</div>
-		<div id="RightNav">
-		  	<% if current_user %>
-		    	Logged in as <%= current_user.first_name %>.
-		    	<%= link_to "Log out", log_out_path %>
-		  	<% end %>
-		</div>
-	</nav>
+		<% else %>
+			<%= yield %>
+		<% end %>
 
-	<div class="row-fluid">
-	    <div class="span2">
-	      	<h6>Your projects</h6>
-	      	<!-- Check if there are any projects for the online user -->
-      		<% if user_projects.size > 0 %>
-      			<table>
-      				<tr>
+      <footer>
+      </footer>
 
-  					<!-- Loop out the online users projects -->
-		      		<% user_projects.each do |u| %>
-					<td class="projectCell">
-	            		<%= link_to u.name, project_path(u.id) %>
-					</td>
-		      		<% if u.user_id == current_user.id %>
-		      			<td>
-							<span class="yourProject"><i class="icon-ok-sign"></i>Admin</span>
-						</td>
-		      		<% else %>
-		      			<td></td>
-		      		<% end %>
-        		<% end %>
-
-        			</tr>
-				</table>
-			<% else %>
-				<p class="muted">You have no projects.</p>
-			<% end %>
-
-      		<br />
-	      	<h6>Your last 10 tickets</h6>
-
-	      	<!-- Loop out the online users tickets if there is any -->
-	      	<% if user_projects.size > 0 %>
-	      		<% user_tickets.each do |u| %>
-					<p>
-	            		<%= link_to u.name, ticket_path(u.id) %>
-					</p>
-        		<% end %>
-			<% else %>
-				<p class="muted">You have no tickets.</p>
-			<% end %>
-	    </div>
-	    <div class="span10">
-	      	<%= yield %>
-	    </div>
-	</div>
-</div>
-<% else %>
-	<%= yield %>
-<% end %>
-</body>
+    </div> <!-- /container -->
+  </body>
 </html>
