--- a/Ruby/AMPTA/app/views/projects/index.html.erb
+++ b/Ruby/AMPTA/app/views/projects/index.html.erb
@@ -1,1 +1,3 @@
-<h4>Welcome to your project manager</h4>
+<h3>Welcome to A Minimal Project Tracking Application</h3>
+
+<%= image_tag("psy.gif", :alt => "psy", :class => "gagnamstyle") %>
