--- a/Ruby/AMPTA/app/views/projects/show.html.erb
+++ b/Ruby/AMPTA/app/views/projects/show.html.erb
@@ -1,9 +1,7 @@
 
 <h4><%= @project.name %></h4>
-
-<p><strong>Startdatum: </strong> <%= @project.start_date.strftime("%d.%m.%y %H:%M") %> </p>
-<p><strong>Slutdatum: </strong> <%= @project.end_date.to_formatted_s(:use_month_numbers ) %> </p>
-
+<p><%= @project.description %></p>
+<p><strong>Start date: </strong> <%= @project.start_date.strftime("%d.%m.%y %H:%M ") %><strong>Deadline: </strong> <%= @project.end_date.to_formatted_s("%d.%m.%y %H:%M") %> </p>
 <P><strong>Project owner: </strong> <%= @owner.first_name %> <%= @owner.last_name %></p>
 
 <strong>
@@ -19,15 +17,34 @@
 <br />
 <br />
 <strong>Tickets: </strong>
-<span>
-	<%= @tickets.name %>
-</span>
+<% if @tickets.project_id == @project.id %>
+  <% @tickets.each do |u| %>
+    <span>
+      <%= u.name  %>
+    </span>
+  <% end %>
+<% else %>
+  <span>
+    There are no tickets for this project...
+  </span>
+<% end %>
 
 <br />
 <br />
-<p><%= link_to "Edit project", edit_project_path(@project) %></p>
-<p><%= link_to "Delete project", project_path(@project), :method => :destroy %></p>
-<%= link_to "New ticket", new_project_ticket_path(@project) %>
+<div class="input-append">
+  <div class="btn-group">
+    <button class="btn dropdown-toggle btn-inverse dropproject" data-toggle="dropdown">
+      Project options
+      <span class="caret"></span>
+    </button>
+    <ul class="dropdown-menu">
+      <li><%= link_to "Edit project", edit_project_path(@project) %></li>
+      <li><%= link_to "Delete project", project_path(@project), :confirm => 'Are you sure?', :method => :delete %></li>
+    </ul>
+    <%= link_to "New ticket", new_project_ticket_path(@project), :class => "btn btn-success" %> 
+  </div>
+  
+</div>
 
 
 
