--- a/Ruby/AMPTA/app/views/projects/search.html.erb
+++ b/Ruby/AMPTA/app/views/projects/search.html.erb
@@ -1,56 +1,7 @@
-<h4>All projects</h4>
-
-<% if @projects.size > 0 %>
-	<table>
-	<% @projects.each do |p| %>
-		<tr class="projectRow">			
-
-
-
-		<!-- If online user are admin -->
-
-
-			<% if p.user_id == current_user.id && p.users.include?(current_user) %>
-				<td class="projectCell">
-						<%= link_to p.name, project_path(p.id) %>
-				</td>
-				<td>
-					<span class="yourProject"><i class="icon-ok-sign"></i>Admin</span>
-				</td>
-				<td>
-					<span class="memberProject"><i class="icon-ok-sign"></i>Member</span>
-				</td>
-
-			<% elsif p.user_id == current_user.id %>
-				<td class="projectCell">
-						<%= link_to p.name, project_path(p.id) %>
-				</td>
-				<td>
-					<span class="yourProject"><i class="icon-ok-sign"></i>Admin</span>
-				</td>				
-
-			<% elsif  p.users.include?(current_user) %>
-				<td class="projectCell">
-					<%= link_to p.name, project_path(p.id) %>
-				</td>
-
-				<td>
-					<span class="memberProject"><i class="icon-ok-sign"></i>Member</span>
-				</td>
-					
-			<% else %>
-				<td class="projectCell">
-					<span class="muted"><%= p.name %></span>
-				</td>
-				<td>
-					<span class="noProject"><i class="icon-remove-circle"></i>Not authorized</span>
-				</td>
-			<% end %>
-
-
-		</tr>
+<form class="navbar-form pull-right">
+	<%= form_tag project_path do %>
+	  <%= text_field_tag :search, params[:search], :class => "span2", :placeholder => "Search project" %>
+	  <%= submit_tag "Search", :name => :nil, :class => "btn btn-success" %>
 	<% end %>
-	</table>
-<% else %>
-	<p class="muted">Sorry, there are no projects created yet.</p>
-<% end %>
+</form>
+
