--- a/Ruby/AMPTA/app/views/projects/all.html.erb
+++ b/Ruby/AMPTA/app/views/projects/all.html.erb
@@ -1,3 +1,7 @@
+<div class="nav-collapse collapse">
+  <%= render :partial => 'projects/search' %>
+</div>
+
 <h4>All projects</h4>
 
 <% if @projects.size > 0 %>
@@ -5,10 +9,7 @@
 	<% @projects.each do |p| %>
 		<tr class="projectRow">			
 
-
-
 		<!-- If online user are admin -->
-
 
 			<% if p.user_id == current_user.id && p.users.include?(current_user) %>
 				<td class="projectCell">
