--- a/Ruby/AMPTA/app/views/projects/show.html.erb
+++ b/Ruby/AMPTA/app/views/projects/show.html.erb
@@ -1,38 +1,45 @@
 
 <h4><%= @project.name %></h4>
-<p><%= @project.description %></p>
-<p><strong>Start date: </strong> <%= @project.start_date.strftime("%d.%m.%y %H:%M ") %><strong>Deadline: </strong> <%= @project.end_date.to_formatted_s("%d.%m.%y %H:%M") %> </p>
-<P><strong>Project owner: </strong> <%= @owner.first_name %> <%= @owner.last_name %></p>
+<br />
+<br />
+<p><strong>Start date: </strong><span> <%= @project.start_date.strftime("%d.%m.%y %H:%M ") %></span><strong>Deadline: </strong><span> <%= @project.end_date.strftime("%d.%m.%y %H:%M ") %> </span></p>
+<br />
+<p><strong>Descripion:</strong><span> <%= @project.description %> </span></p>
+<br />
+<P><strong>Project owner: </strong><span> <%= @owner.first_name %> <%= @owner.last_name %> </span></p>
 
 <strong>
 	Medlemmar: 
 </strong>
-
+</br>
+</br>
 <% @members.each do |u| %>
-	<span>
-		<%= u.first_name %> <%= u.last_name %>,
-	</span>
+  <p>
+  	<span>
+  		<%= u.first_name %> <%= u.last_name %>
+  	</span>
+  </p>
 <% end %>
 
 <br />
 <br />
 <strong>Tickets: </strong>
-<% if @tickets.project_id == @project.id %>
+</br>
+</br>
   <% @tickets.each do |u| %>
     <span>
-      <%= u.name  %>
+      <% if current_user.id == @project.user_id || current_user.id == u.user_id %>
+        <%= link_to u.name, ticket_path(u.id) %></br>
+      <% else %>
+        <p class="muted"><%= u.name %></p>
+      <% end %>
     </span>
   <% end %>
-<% else %>
-  <span>
-    There are no tickets for this project...
-  </span>
-<% end %>
-
 <br />
 <br />
 <div class="input-append">
   <div class="btn-group">
+    <% if current_user.id == @project.user_id %>
     <button class="btn dropdown-toggle btn-inverse dropproject" data-toggle="dropdown">
       Project options
       <span class="caret"></span>
@@ -41,6 +48,7 @@
       <li><%= link_to "Edit project", edit_project_path(@project) %></li>
       <li><%= link_to "Delete project", project_path(@project), :confirm => 'Are you sure?', :method => :delete %></li>
     </ul>
+    <% end %>
     <%= link_to "New ticket", new_project_ticket_path(@project), :class => "btn btn-success" %> 
   </div>
   
