--- a/Ruby/AMPTA/app/views/tickets/edit.html.erb
+++ b/Ruby/AMPTA/app/views/tickets/edit.html.erb
@@ -17,6 +17,10 @@
 
         <%= p.label :description %>
         <%= p.text_field :description %>
-        <p></p>
+        
+        <br />
+        <%= p.label :status %>
+        <%= p.collection_select :status_id, @status, :id, :status_name %>
+        <br />
     	<%= p.submit "Save changes", :class => "btn btn-warning" %>
 <% end %>
