--- a/Ruby/AMPTA/app/views/projects/edit.html.erb
+++ b/Ruby/AMPTA/app/views/projects/edit.html.erb
@@ -1,10 +1,12 @@
+<% @users = User.all %>
+
 <h4>Editing <%= @project.name %></h4>
 
 <%= form_for @project, :url => project_path(@project)  do |p| %>
       
   <% if @project.errors.any? %>
     <div class="error_messages">
-      <h4>Form is invalid</h4>
+      <h4>Error occured - please correct and try again.</h4>
       <ul>
         <% for msg in @project.errors.full_messages %>
           <li><%= msg %></li>
@@ -37,5 +39,5 @@
               </p>
         <% end %>
       <p></p>
-    	<%= p.submit "Save changes", :class => "btn btn-warning" %>
+      <%= p.submit "Save changes", :class => "btn btn-warning" %>
 <% end %>
