--- a/Ruby/AMPTA/app/views/tickets/show.html.erb
+++ b/Ruby/AMPTA/app/views/tickets/show.html.erb
@@ -1,5 +1,8 @@
 <h1><%= @ticket.name %></h1>
-
+<p></p>
+<div id="notice"><%= flash[:notice] %></div>
+<div id="enotice"><%= flash[:enotice] %></div>
+<p></p>
 <p><bold>Description: </bold><span><%= @ticket.description %></span></p>
 <p><bold>Created at: </bold><span><%= @ticket.created_at.strftime("%d.%m.%y %H:%M ") %></span></p>
 <p><bold>Last edited: </bold><span> <%= @ticket.updated_at.strftime("%d.%m.%y %H:%M ") %></span></p>
